@@ -10,6 +10,10 @@
 	  not seem to hinder movement until they are activated.
 	* Prevent ES from displaying the 'font0000.vga' file in SI's static dir as it
 	  is apparently from an old origin screensaver and is not a true vga file.
+	* Fixed bug causing avatar's 'rest_time' to build up too fast. Incidentally,
+	  this helps to fix a jerkiness in scripts introduced in previous commits.
+	  Also, script opcode 'delay' and any scripted frame changes or steps now will
+	  clear the rest time for actors.
 
 2006-09-21  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Decoupled usecode functions for shapes > 1023 from the shape #. Removed
